# python-project-template

./: .pre-commit-config.yaml  justfile  pyproject.toml
